# cmake_study

test_cmake/: .cmake_yufa.txt.swo  .cmake_yufa.txt.swp  cmake_yufa.txt
test_cmake/test_add_custom_command/: CMakeLists.txt
test_cmake/test_cmake01/: CMakeLists.txt  helloworld.cpp
test_cmake/test_cmake02/: CMakeLists.txt
test_cmake/test_cmake02/src/: mainapp.cpp
test_cmake/test_cmake03/: CMakeLists.txt
test_cmake/test_cmake03/include/: student.h
test_cmake/test_cmake04/: CMakeLists.txt
test_cmake/test_cmake04/src/: student.cpp
test_cmake/test_cmake05/: CMakeLists.txt
test_cmake/test_cmake06/: CMakeLists.txt
test_cmake/test_cmake06/src/: hello.cpp
test_cmake/test_macro_function/: .CMakeLists.txt.swp  CMakeLists.txt
